attempts to prevent fullscreen icon from showing on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,15 +13,11 @@
     @apply bg-blue-700;
   }
 }
-/* this doesnt work apparently */
-/* @layer base {
-  input[type="color"] {
-    border: none;
+
+@layer components {
+  @media (hover: none) {
+    .noShowOnHover {
+      display: none;
+    }
   }
-  ::-webkit-color-swatch {
-    border: none;
-  }
-  ::-moz-color-swatch {
-    border: none;
-  }
-} */
+}
